--- a/theme/templates/accounts/profile.html
+++ b/theme/templates/accounts/profile.html
@@ -463,7 +463,7 @@
                                         {% if profile_user.id == user.id %}
                                         <div class="row" data-page-mode="edit">
                                             <fieldset>
-                                                <div class="col-sm-12"><label>US Phone 1</label></div>
+                                                <div class="col-sm-12"><label>Phone 1</label></div>
 
                                                 <div class="col-sm-6">
                                                     <select name="phone_1_type" class="form-control">
@@ -484,7 +484,7 @@
                                             </fieldset>
 
                                             <fieldset>
-                                                <div class="col-sm-12"><label>US Phone 2</label></div>
+                                                <div class="col-sm-12"><label>Phone 2</label></div>
 
                                                 <div class="col-sm-6">
                                                     <select name="phone_2_type" class="form-control">
@@ -750,7 +750,6 @@
 {% endblock %}
 
 {% block extra_js %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.13.4/jquery.mask.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-formhelpers.js"></script>
     <script type="text/javascript">
 
@@ -859,8 +858,6 @@
                     $(this).addClass("form-invalid");
                 }
             });
-
-            $('.phone').mask('+1 (000) 000-0000');
 
             $("[data-page-mode='edit']").hide();
             $("#btn-edit-profile").click(function () {
