--- a/theme/templates/accounts/profile.html
+++ b/theme/templates/accounts/profile.html
@@ -214,7 +214,7 @@
                                         <label>Add a CV</label>
                                         <div class="input-group">
                                             <span class="input-group-btn">
-                                                <span class="btn btn-primary btn-file">
+                                                <span id="cv-custom-upload" class="btn btn-primary btn-file">
                                                     Browse&hellip; <input type="file" name="cv">
                                                 </span>
                                             </span>
@@ -656,94 +656,96 @@
             </div>
         </div>
 
-    <!-- Deactivate Account Modal -->
-    <div class="modal fade" id="deactivate-account-dialog" tabindex="-1" role="dialog"
-         aria-labelledby="Deactivate account">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal"
-                            aria-label="Close"><span aria-hidden="true">&times;</span>
-                    </button>
-                    <h4 class="modal-title" id="myModalLabel">Deactivate Account</h4>
-                </div>
-                <div class="modal-body">
-                    <div class="row">
-                        <div class="col-sm-2 col-xs-12 text-center">
-                            <span id="icon-warning" class="glyphicon glyphicon-warning-sign"></span>
-                        </div>
-                        <div class="col-sm-10 col-xs-12">
-                            <div><strong>WARNING</strong>: This will <strong><u>permanently</u></strong> disable your account. You cannot undo
-                                this action. Please note that if you do choose to disable your account, your Resources
-                                will remain in HydroShare and will be accessible to anyone who currently has access. If
-                                you wish to remove your resources from HydroShare, you should do so <u>before</u> disabling
-                                your account.
-                            </div>
-
-                        </div>
+        {% if profile_user.id == user.id %}
+        <!-- Deactivate Account Modal -->
+        <div class="modal fade" id="deactivate-account-dialog" tabindex="-1" role="dialog"
+             aria-labelledby="Deactivate account">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal"
+                                aria-label="Close"><span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title" id="myModalLabel">Deactivate Account</h4>
                     </div>
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="col-sm-2 col-xs-12 text-center">
+                                <span id="icon-warning" class="glyphicon glyphicon-warning-sign"></span>
+                            </div>
+                            <div class="col-sm-10 col-xs-12">
+                                <div><strong>WARNING</strong>: This will <strong><u>permanently</u></strong> disable your account. You cannot undo
+                                    this action. Please note that if you do choose to disable your account, your Resources
+                                    will remain in HydroShare and will be accessible to anyone who currently has access. If
+                                    you wish to remove your resources from HydroShare, you should do so <u>before</u> disabling
+                                    your account.
+                                </div>
 
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <a href="{% url 'deactivate_account' %}" class="btn btn-danger">Confirm</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Delete picture modal -->
-    <div class="modal fade" id="delete-picture" tabindex="-1" role="dialog"
-         aria-labelledby="deleteProfilePicture">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal"
-                            aria-label="Close"><span aria-hidden="true">&times;</span>
-                    </button>
-                    <h4 class="modal-title" id="deleteProfilePicture">Delete profile picture</h4>
-                </div>
-                <div class="modal-body">
-                    Are you sure you want to delete your profile picture?
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">
-                        Close
-                    </button>
-                    <button class="btn btn-primary" id="picture-clear_id" name="picture-clear"
-                            title="Remove profile picture"
-                            value="clear">Confirm
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
+                            </div>
+                        </div>
 
-    <!-- Delete CV modal -->
-    <div class="modal fade" id="delete-cv" tabindex="-1" role="dialog"
-         aria-labelledby="deleteCV">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal"
-                            aria-label="Close"><span aria-hidden="true">&times;</span>
-                    </button>
-                    <h4 class="modal-title" id="deleteProfilePicture">Delete CV</h4>
-                </div>
-                <div class="modal-body">
-                    Are you sure you want to delete your CV?
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">
-                        Close
-                    </button>
-                    <button class="btn btn-primary" id="cv-clear_id" name="cv-clear"
-                            title="Remove profile picture"
-                            value="clear">Confirm
-                    </button>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <a href="{% url 'deactivate_account' %}" class="btn btn-danger">Confirm</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+        <!-- Delete picture modal -->
+        <div class="modal fade" id="delete-picture" tabindex="-1" role="dialog"
+             aria-labelledby="deleteProfilePicture">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal"
+                                aria-label="Close"><span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title" id="deleteProfilePicture">Delete profile picture</h4>
+                    </div>
+                    <div class="modal-body">
+                        Are you sure you want to delete your profile picture?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">
+                            Close
+                        </button>
+                        <button class="btn btn-primary" id="picture-clear_id" name="picture-clear"
+                                title="Remove profile picture"
+                                value="clear">Confirm
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Delete CV modal -->
+        <div class="modal fade" id="delete-cv" tabindex="-1" role="dialog"
+             aria-labelledby="deleteCV">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal"
+                                aria-label="Close"><span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title" id="deleteProfilePicture">Delete CV</h4>
+                    </div>
+                    <div class="modal-body">
+                        Are you sure you want to delete your CV?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">
+                            Close
+                        </button>
+                        <button class="btn btn-primary" id="cv-clear_id" name="cv-clear"
+                                title="Remove profile picture"
+                                value="clear">Confirm
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endif %}
     </form>
 
     {% endwith %}
@@ -820,7 +822,7 @@
             });
         }
 
-        $(document).on('change', '.btn-primary.btn-file :file', function () {
+        $(document).on('change', '#cv-custom-upload :file', function () {
             var input = $(this);
             var numFiles = input.get(0).files ? input.get(0).files.length : 1;
             var label = input.val().replace(/\\/g, '/').replace(/.*\//, '');
