--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -170,7 +170,7 @@
                 {% endif %}
             </div>
         {% endif %}
-        {% endblock %}
+       {% endblock %} {# content_block #}
 
         {# ======= Content tabs (code moved here because django does not render blocks inside included templates) ======= #}
         <div class="col-sm-12">
