--- a/theme/templates/accounts/profile.html
+++ b/theme/templates/accounts/profile.html
@@ -13,7 +13,7 @@
         {% endif %}
         <div class="row">
             {% if profile_user.id == user.id %}
-            <div data-page-mode="edit" class="alert alert-warning" role="alert">Information provided below will be public for all HydroShare users to see.</div>
+            <div data-page-mode="edit" class="alert alert-warning" role="alert">Information entered here may be publicly visible. Do not enter information that you want to keep private.</div>
             {% endif %}
 
             <div class="col-sm-12">
