--- a/theme/templates/accounts/profile.html
+++ b/theme/templates/accounts/profile.html
@@ -755,6 +755,8 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-formhelpers.js"></script>
     <script type="text/javascript">
 
+        var flagRequired = "<div class='label label-danger flag-required'>This field is required.</div>";
+
         // Preview profile picture
         function readURL(input) {
             if (input.files && input.files[0]) {
@@ -779,6 +781,8 @@
             for (var i = 0; i < requiredElements.length; i++) {
                 if (!$(requiredElements[i]).val()) {
                     $(requiredElements[i]).addClass("form-invalid");
+                    $(requiredElements[i]).parent().find(".flag-required").remove();
+                    $(requiredElements[i]).parent().append(flagRequired);
                     flag = false;
                 }
             }
@@ -855,9 +859,13 @@
             $(".form-required").change(function(){
                 if ($(this).val()) {
                     $(this).removeClass("form-invalid");
+                    $(this).parent().find(".flag-required").remove();
                 }
                 else {
                     $(this).addClass("form-invalid");
+                    $(this).parent().find(".flag-required").remove();
+                    $(this).parent().append(flagRequired);
+
                 }
             });
 
